--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
+  "name": "mv-doughnut-chart",
+  "type": "module",
+  "main": "donutchart/src/js/mv-donut-chart.js",
   "dependencies": {
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "lit": "^2.3.1",
     "lit-element": "^3.2.2",
     "lit-html": "^2.3.1"
+  },
+  "scripts": {
+    "dev": "webpack serve -c webpack.config.cjs"
+  },
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   }
 }
