--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lit-html": "^2.3.1"
   },
   "scripts": {
-    "dev": "webpack serve -c webpack.config.cjs"
+    "dev": "webpack serve -c webpack.config.cjs",
+    "build": "webpack ./donutchart/src/js/mv-donut-chart.js --output-filename=index.js --mode=development"
   },
   "devDependencies": {
     "webpack": "^5.74.0",
