--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "webpack ./donutchart/src/js/mv-donut-chart.js --output-filename=index.js --mode=development"
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
